syntax = "proto3";

package monitoring;
// Go 코드의 패키지 경로를 설정
option go_package = "./pb";

service Monitoring_Service {
  rpc SayHello (Monitoring_request) returns (stream Monitoring_response);
}

message Monitoring_request {
  string start_monitoring = 1; //ex: "KRW-BTC"
}

message Monitoring_response {
  string market = 1;
  string trade_date = 2;
  string trade_time = 3;
  string trade_date_kst = 4;
  string trade_time_kst = 5;
  int64 trade_timestamp = 6;
  int64 opening_price = 7;
  int64 high_price = 8;
  int64 low_price = 9;
  int64 trade_price = 10;
  int64 prev_closing_price = 11;
  string change = 12; // "FALL" 또는 "RISE"
  int64 change_price = 13;
  double change_rate = 14;
  int64 signed_change_price = 15;
  double signed_change_rate = 16;
  double trade_volume = 17;
  double acc_trade_price = 18;
  double acc_trade_price_24h = 19;
  double acc_trade_volume = 20;
  double acc_trade_volume_24h = 21;
  int64 highest_52_week_price = 22;
  string highest_52_week_date = 23;
  int64 lowest_52_week_price = 24;
  string lowest_52_week_date = 25;
  int64 timestamp = 26;
}